--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -17,7 +17,8 @@ jobs:
     - name: Set up miniconda
       uses: conda-incubator/setup-miniconda@v2
       with:
-        mamba-version: "*"
+        miniforge-variant: Mambaforge
+        miniforge-version: latest
         channels: conda-forge,defaults
         channel-priority: true
         auto-update-conda: true
