Fix warning in mypy about silently following imports

--- a/ci/mypy.ini
+++ b/ci/mypy.ini
@@ -2,5 +2,5 @@
 strict_optional = False
 ignore_missing_imports = True
 disallow_untyped_decorators = False
-follow_imports = "silent"
+follow_imports = silent
 disallow_untyped_defs = True
