--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,18 @@
-# PyCharm
-.idea
-
 # Python compiled & optimized files
 *.pyc
 *.pyo
+*__pycache__*
+*.pytest_cache
+
+# Ruff cache
+*.ruff_cache
+
+# Build artifacts
+build/
+dist/
 
 # MyPy Cache directory
 .mypy_cache
 
-# for develop installs
-*.egg-info
-
-# local dirs
-envs
-environments
-.conda
-conda-env-builder
-
-# snakemake
-.snakemake
-
-# VSCode dir
-.vscode
+# MacOS
+.DS_Store
