--- a/tests/integration/test_main.yml
+++ b/tests/integration/test_main.yml
@@ -1,5 +1,5 @@
 - name: basic
-  command: bash -c 'scripts/run_snakemake.sh -s hello_world.smk -o test-output/example'
+  command: bash -c 'scripts/run_snakemake.sh -s Snakefile -o test-output/example'
   files:
     - path: test-output/example/message.txt
       contains:
