feat: renamed python toolkit folder python > toolkit

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Install toolkit
       shell: micromamba-shell {0}
       run: |
-        cd python
+        cd toolkit
         poetry install
     - name: Run style checks and unit tests
       shell: micromamba-shell {0}
