--- a/dependencies/toolkit.yml
+++ b/dependencies/toolkit.yml
@@ -1,5 +1,5 @@
 # This config file is for the host environment into which the toolkit
-# is installed. The toolkit's dependencies are managed in python/pyproject.toml.
+# is installed. The toolkit's dependencies are managed in toolkit/pyproject.toml.
 name: toolkit
 channels:
   - conda-forge
